# groep-ta-2020-2021-menua

./: CMakeLists.txt  Car.cpp  Car.h  Shop.cpp  Shop.h  System.cpp  System.h  car.cpp  car.h  data.json  data2.json  main.cpp  shop.cpp  shop.h  system.cpp  system.h
Interface/: gui.cpp  gui.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Interface/SubInterface/: subwindow.cpp  subwindow.h  subwindow.ui
TA_MenuaHovhannisyan/: DFA.cpp  DFA.h  Edge.cpp  Edge.h  NFA.cpp  NFA.h  Node.cpp  Node.h  RE.cpp  RE.h  State.cpp  State.h  Transition.cpp  Transition.h  main.cpp
TA_MenuaHovhannisyan/TA_json/: DFA3.json  DFA4.json  NFA.json
