cmake_minimum_required(VERSION 3.17)
project(TAProject2021_MenuaHovhannisyan)

set(CMAKE_CXX_STANDARD 14)

add_executable(TAProject2021_MenuaHovhannisyan main.cpp TA_MenuaHovhannisyan/DFA.h TA_MenuaHovhannisyan/State.cpp TA_MenuaHovhannisyan/State.h TA_MenuaHovhannisyan/DFA.cpp TA_MenuaHovhannisyan/Transition.cpp TA_MenuaHovhannisyan/Transition.h TA_MenuaHovhannisyan/NFA.cpp TA_MenuaHovhannisyan/NFA.h shop.cpp shop.h car.cpp car.h system.cpp system.h)